--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Gothic+A1:wght@200;300;400;500;600;700;800&family=Poppins:wght@300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Fredoka+One&family=Gothic+A1:wght@200;300;400;500;600;700;800&family=Poppins:wght@300;400;500;600;700;800&display=swap');
 
 * {
     margin: 0;
@@ -17,6 +17,7 @@
 }
 
 body {
+    font-family: 'Dancing Script', cursive;
     font-family: 'Fredoka One', cursive;
     font-family: 'Gothic A1', sans-serif;
     font-family: 'Poppins', sans-serif;
@@ -268,20 +269,27 @@ body {
     margin-bottom: 70px;
 }
 
+.gallery__game {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+}
+
 .gallery__comentario {
-    font-family: 'Gothic A1', sans-serif;
+    font-family: 'Dancing Script', cursive;
     text-align: center;
     font-weight: 500;
     letter-spacing: 2px;
     word-spacing: 2px;
+    font-size: 2rem;
 }
 
 .gallery__contenedor {
-    padding-top: 20px;
-    padding-bottom: 60px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .gallery__picture {
@@ -293,6 +301,18 @@ body {
     object-fit: cover;
     box-shadow: 0 0 12px rgba(27, 29, 1, 0.579);
     box-shadow: var(--box-shadow-principal);
+}
+
+.gallery__redes {
+    display: block;
+    display: flex;
+    justify-content: space-between;
+}
+
+.gallery__icon {
+    /* margin-top: 30px; */
+    width: 10%;
+    height: 100px;
 }
 
 /* ----------------- close gallery ---------------------- */
