--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -175,7 +175,6 @@ body {
 }
 
 .about__secciones {
-    height: 50vh;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -183,6 +182,7 @@ body {
 }
 .about__seller {
     width: 90%;
+    height: 400px;
     max-width: 550px;
 }
 
