Modificacion en imagenes

--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -534,7 +534,7 @@ figure.layouts__picture {
 }
 
 .noticias__imagenUno {
-  background-image: url(/img/callNoti.jpg);
+  background-image: url(/img/warzoneNoti.jpg);
   width: 60em;
   height: 100%;
   background-position: center;
