--- a/CSS/producto.css
+++ b/CSS/producto.css
@@ -1,95 +1,272 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Fredoka+One&family=Gothic+A1:wght@200;300;400;500;600;700;800&family=Poppins:wght@300;400;500;600;700;800&display=swap");
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  /* outline: 3px solid red; */
 }
 
-.hero__picture {
-  width: 100%;
-  max-width: 450px;
-  display: block;
+:root {
+  --color-primario: #fcff6c;
+  --color-secundario: #f4f4ed;
+  --color-terciario: #1b1b1e;
+  --color-blanco: #ffffff;
+  --box-shadow-principal: 0px 10px 13px -7px #000000,
+    5px 5px 15px 5px rgba(0, 0, 0, 0);
+}
+
+body {
+  font-family: "Dancing Script", cursive;
+  font-family: "Fredoka One", cursive;
+  font-family: "Gothic A1", sans-serif;
+  font-family: "Poppins", sans-serif;
+  background: var(--color-blanco);
+}
+
+.hero {
+  height: 100vh;
+  background-image: url("../img/theWitcher.jpg");
+  background-position: center;
+  background-size: cover;
+  padding-top: 0.1px;
+  position: relative;
+}
+
+.contenedor {
+  width: 90%;
+  max-width: 1170px;
   margin: 0 auto;
 }
 
-.layout__picture {
-  width: 30%;
-  height: 250px;
-  margin-bottom: 20px;
-  display: block;
-  border-radius: 5px;
-  object-fit: cover;
-  box-shadow: 0 0 12px rgba(27, 29, 1, 0.579);
+/* ------------------- seccion menu ------------------- */
+
+.nav {
+  height: 70px;
+  color: var(--color-blanco);
 }
 
-/* footer */
-.footer {
-  background: #283048; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to bottom,
-    #859398,
-    #283048
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to bottom,
-    #859398,
-    #283048
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  color: #fff;
-  text-align: center;
+.nav__logo {
+  display: flex;
+  align-items: center;
+}
+.hero__picture {
+  width: 40px;
+  margin-right: 7px;
 }
 
-.footer__container {
-  --color-primary: #fff;
+.nav__contenedor {
+  height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.footer__texts {
-  width: 50%;
+.nav__titulo {
+  color: var(--color-blanco);
 }
 
-.footer__icon {
-  display: inline-block;
-  font-size: 2rem;
-  margin: 0 30px;
+.nav__link {
+  color: var(--color-blanco);
   text-decoration: none;
-  color: #fff;
-  margin-bottom: 30px;
-  width: 60px;
-  height: 60px;
-  border: 1px solid;
-  border-radius: 50%;
+  margin-left: 1em;
 }
 
-.footer__icon.fab {
-  line-height: 60px;
-}
-
-.footer__icon:hover {
-  background: #fff;
-  color: #f77062;
+.nav__link--boton {
+  font-weight: 700;
+  padding: 5px 10px;
+  background: var(--color-primario);
+  border: none;
+  border-radius: 30px;
   cursor: pointer;
+  border: 2px solid var(--color-primario);
+  color: #283048;
 }
 
-.footer__link {
-  display: inline-block;
-  color: #fff;
-  margin: 0 20px;
-  margin-bottom: 15px;
+.nav__link--boton:hover {
+  color: var(--color-blanco);
+  background: #3dfaff;
+  border: 2px solid #3dfaff;
 }
 
-.footer__link:hover {
-  text-decoration: none;
+/* -----------seccion hero ---------------- */
+
+.hero__wave {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
-.footer__img {
-  margin: 0;
-  width: 35%;
+.hero__titulo {
+  margin-top: 33px;
+  font-family: "Dancing Script", cursive;
+  font-size: 4rem;
+  text-align: center;
+  color: #000000;
 }
 
-.footer__picture {
-  width: 90%;
+.hero__paragrafo {
+  font-family: "Dancing Script", cursive;
+  font-size: 1.5rem;
+  text-align: center;
+  padding: 20px 0 6px;
+  font-weight: 700;
+}
+
+.hero__main {
+  width: 100%;
+  height: 80%;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  align-items: start;
+}
+
+.hero__form {
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  outline: none;
+}
+
+.hero__search {
+  margin-top: 1.5rem;
+  margin-right: 0.5rem;
+  padding: 5px;
+  border-radius: 50px;
+  outline: none;
+  border: 1px solid var(--color-blanco);
+}
+
+/* .hero__buscar {
+  font-weight: 700;
+  font-size: 1.2rem;
+  padding: 10px;
+  color: var(--color-blanco);
+} */
+
+.hero__boton {
+  color: #283048;
+  font-size: 1rem;
+  font-weight: 700;
+  padding: 5px 10px;
+  background: #f0f7ee;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+  border: 2px solid #f0f7ee;
+}
+
+.hero__boton:hover {
+  color: var(--color-blanco);
+  background: #3dfaff;
+  border: 2px solid #3dfaff;
+}
+
+/* -------------- close seccion hero ---------- */
+
+/* ---------------seccion portafolio ----------- */
+
+.portafolio__grid {
+  width: 100%;
+  height: 2000px;
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-areas:
+    "card1 card2 card3"
+    "card4 card5 card6"
+    "card7 card8 card9";
+}
+
+.portafolio__card {
+  -webkit-box-shadow: 5px 5px 15px -4px rgba(0, 0, 0, 0.59);
+  box-shadow: 5px 5px 15px -4px rgba(0, 0, 0, 0.59);
+}
+
+.portafolio__img {
+  width: 100%;
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.portafolio__texts {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+}
+
+.fa-solid {
+  color: var(--color-blanco);
+  font-size: 1.2rem;
+  cursor: pointer;
+  padding: 7px;
+  background: #ff5666;
+  border-radius: 50px;
+  letter-spacing: 1px;
+}
+
+.fa-solid:hover {
+  background: #f8333c;
+}
+
+.precio {
+  /* padding-top: 10px; */
+  font-size: 2rem;
+}
+
+.moneda {
+  font-size: 1.5rem;
+}
+
+.text {
+  font-size: 0.8rem;
+}
+
+.card1 {
+  grid-area: card1;
+  height: 600px;
+}
+
+.card2 {
+  grid-area: card2;
+  height: 600px;
+}
+
+.card3 {
+  grid-area: card3;
+  height: 600px;
+}
+
+.card4 {
+  grid-area: card4;
+  height: 600px;
+}
+
+.card5 {
+  grid-area: card5;
+  height: 600px;
+}
+
+.card6 {
+  grid-area: card6;
+  height: 600px;
+}
+
+.card7 {
+  grid-area: card7;
+  height: 600px;
+}
+
+.card8 {
+  grid-area: card8;
+  height: 600px;
+}
+
+.card9 {
+  grid-area: card9;
+  height: 600px;
 }
