--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -22,17 +22,11 @@ body {
 }
 
 .hero {
-  background: #283048; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to bottom,
-    #859398,
-    #283048
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to bottom,
-    #859398,
-    #283048
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-image: url(/img/fondoHero2.jpg);
+  background-position: center;
+  background-size: cover;
+  padding-top: 0.1px;
+  position: relative;
 }
 
 .contenedor {
@@ -95,14 +89,17 @@ body {
 /* -----------------seccion hero main ------------------ */
 
 .hero__main {
-  display: flex;
   height: 93vh;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   min-height: 600px;
+  align-items: end;
 }
 
 .hero__textos {
   flex: 1;
+  grid-column: 1/3;
 }
 
 .hero__picture {
@@ -125,7 +122,7 @@ body {
 .hero__paragrafo {
   font-size: 1.5rem;
   font-weight: 300;
-  color: var(--color-blanco);
+  color: #000000;
   text-align: center;
 }
 
@@ -139,6 +136,9 @@ body {
   margin-top: 1.5rem;
   margin-right: 0.5rem;
   padding: 5px;
+  border-radius: 50px;
+  outline: none;
+  border: 1px solid var(--color-blanco);
 }
 
 .hero__buscar {
@@ -164,6 +164,73 @@ body {
   color: var(--color-blanco);
   background: #3dfaff;
   border: 2px solid #3dfaff;
+}
+
+.nav__input:checked + .nav__menu {
+}
+
+.nav__label,
+.nav__input {
+  display: none;
+}
+
+@media (max-width: 969px) {
+  .nav__label {
+    display: block;
+    cursor: pointer;
+  }
+
+  .nav__menu {
+    position: fixed;
+    top: 80px;
+    bottom: 0;
+    background: #001514;
+    width: 100%;
+    left: 0;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    clip-path: circle(0 at center);
+    transition: clip-path 1s ease-in-out;
+  }
+
+  .nav__input:checked + .nav__menu {
+    clip-path: circle(100% at center);
+  }
+
+  .nav__link--media::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+    padding: 2px;
+    background: var(--color-blanco);
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .hero__main {
+    height: 80vh;
+    display: flex;
+    align-items: center;
+  }
+
+  .hero__titulo {
+    text-align: center;
+    font-size: 2rem;
+    color: var(--color-primario);
+    font-size: 3rem;
+    padding-bottom: 30px;
+  }
+
+  .hero__buscar {
+    display: none;
+  }
+
+  .hero__search {
+    border: 1px solid black;
+  }
 }
 
 /*----------------------- close main ------------------------- */
@@ -237,6 +304,18 @@ body {
   background: #3dfaff;
   border: 2px solid #3dfaff;
 }
+
+@media screen and (max-width: 500px) {
+  .about__titulo {
+    font-size: 2rem;
+  }
+
+  .about__secciones {
+    width: 450px;
+    height: 1000px;
+  }
+}
+
 /* ---------------------- close about ------------------------- */
 
 /* ----------------------- gallery ---------------------------- */
@@ -367,6 +446,84 @@ body {
   font-family: "Dancing Script", cursive;
   text-align: center;
 }
+
+@media screen and (max-width: 500px) {
+  .contenedor {
+    width: 95%;
+    max-width: 390px;
+    overflow: hidden;
+    margin: 0 auto;
+  }
+
+  .portfolio {
+    padding-top: 50px;
+    padding-bottom: 10px;
+  }
+
+  .portafolio__grid {
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    grid-template-areas:
+      "nota nota"
+      "nota nota"
+      "nota nota"
+      "member1 member2"
+      "member3 member4"
+      "member5 member6"
+      "member7 member8"
+      "member9 .";
+    gap: 10px;
+    place-items: center;
+  }
+
+  .portafolio__informacion {
+    height: 530px;
+    gap: 20px;
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .nota {
+    grid-area: nota;
+  }
+  .member1 {
+    grid-area: member1;
+  }
+
+  .member2 {
+    grid-area: member2;
+  }
+
+  .member3 {
+    grid-area: member3;
+  }
+
+  .member4 {
+    grid-area: member4;
+  }
+
+  .member5 {
+    grid-area: member5;
+  }
+
+  .member6 {
+    grid-area: member6;
+  }
+
+  .member7 {
+    grid-area: member7;
+  }
+
+  .member8 {
+    grid-area: member8;
+  }
+
+  .member9 {
+    grid-area: member9;
+  }
+}
 /* ----------------- close portafolio------------------ */
 
 /* ------------------- layouts ---------------------  */
@@ -431,6 +588,42 @@ figure.layouts__picture {
   border: 2px solid #3dfaff;
 }
 
+@media screen and (max-width: 500px) {
+  .layouts__control {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  figure.layouts__picture {
+    width: 60vh;
+    text-align: center;
+  }
+
+  .layouts__title {
+    font-size: 2rem;
+  }
+
+  .layouts__img3 {
+    margin: 50px;
+    margin-bottom: 20px;
+    width: 70%;
+    background-size: cover;
+    box-shadow: var(--box-shadow-principal);
+  }
+
+  .layouts__referido {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .layouts__cta {
+    margin-bottom: 10px;
+  }
+}
+
 /* ------------------- close layouts --------------------- */
 
 /* ------------------- opinion --------------------- */
@@ -442,6 +635,7 @@ figure.layouts__picture {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   gap: 30px;
+  justify-content: center;
 }
 
 .opinion__control {
@@ -492,6 +686,17 @@ figure.layouts__picture {
 
 .opinion__paragrafo {
   padding-top: 10px;
+}
+
+@media screen and (max-width: 500px) {
+  .opinion {
+    padding: 30px 0;
+    background: #fefdff;
+  }
+
+  .opinion__mensaje {
+    width: 90%;
+  }
 }
 
 /* ------------------- close opinion --------------------- */
