--- a/CSS/producto.css
+++ b/CSS/producto.css
@@ -136,13 +136,6 @@ body {
   border: 1px solid var(--color-blanco);
 }
 
-/* .hero__buscar {
-  font-weight: 700;
-  font-size: 1.2rem;
-  padding: 10px;
-  color: var(--color-blanco);
-} */
-
 .hero__boton {
   color: #283048;
   font-size: 1rem;
@@ -161,11 +154,85 @@ body {
   border: 2px solid #3dfaff;
 }
 
+.nav__label,
+.nav__input {
+  display: none;
+}
+
+@media (max-width: 969px) {
+  .nav__label {
+    display: block;
+    cursor: pointer;
+  }
+
+  .nav__menu {
+    position: fixed;
+    top: 80px;
+    bottom: 0;
+    background: #001514;
+    width: 100%;
+    left: 0;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: flex-start;
+    clip-path: circle(0 at center);
+    transition: clip-path 1s ease-in-out;
+  }
+
+  .nav__input:checked + .nav__menu {
+    clip-path: circle(100% at center);
+  }
+
+  .nav__link--media::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+    padding: 2px;
+    background: var(--color-blanco);
+  }
+
+  .hero__wave {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .hero__main {
+    height: 80vh;
+    display: flex;
+    align-items: center;
+  }
+
+  .hero__titulo {
+    text-align: center;
+    font-size: 2rem;
+    color: #fffbff;
+    font-size: 3rem;
+    padding-bottom: 30px;
+    padding: 0;
+  }
+
+  .hero__paragrafo {
+    color: #fffbff;
+  }
+
+  .hero__buscar {
+    display: none;
+  }
+
+  .hero__search {
+    border: 1px solid black;
+  }
+}
+
 /* -------------- close seccion hero ---------- */
 
 /* ---------------seccion portafolio ----------- */
 
 .portafolio__grid {
+  padding: 2px 5px;
   width: 100%;
   height: 2000px;
   display: grid;
@@ -209,6 +276,10 @@ body {
   letter-spacing: 1px;
 }
 
+.fa-sack-dollar {
+  font-size: 1rem;
+}
+
 .fa-solid:hover {
   background: #f8333c;
 }
@@ -216,6 +287,10 @@ body {
 .precio {
   /* padding-top: 10px; */
   font-size: 2rem;
+}
+
+.juego {
+  font-size: 1.3rem;
 }
 
 .moneda {
@@ -269,6 +344,45 @@ body {
 .card9 {
   grid-area: card9;
   height: 600px;
+}
+
+@media screen and (max-width: 818px) {
+  .precio {
+    font-size: 1.5rem;
+  }
+
+  .juego {
+    font-size: 1rem;
+  }
+
+  .moneda {
+    font-size: 1.5rem;
+  }
+
+  .text {
+    font-size: 0.8rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .portafolio__grid {
+    width: 85%;
+    height: 100%;
+    display: grid;
+    gap: 30px;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(9, 1fr);
+    grid-template-areas:
+      "card1"
+      "card2"
+      "card3"
+      "card4"
+      "card5"
+      "card6"
+      "card7"
+      "card8"
+      "card9";
+  }
 }
 
 /* --------------- close protafolio ----------- */
