--- a/CSS/producto.css
+++ b/CSS/producto.css
@@ -86,7 +86,7 @@ body {
   border: 2px solid #3dfaff;
 }
 
-/* -----------seccion hero ---------------- */
+/* ----------- seccion hero ---------------- */
 
 .hero__wave {
   position: absolute;
@@ -227,9 +227,9 @@ body {
   }
 }
 
-/* -------------- close seccion hero ---------- */
+/* --------------- close seccion hero ---------- */
 
-/* ---------------seccion portafolio ----------- */
+/* --------------- seccion portafolio ----------- */
 
 .portafolio__grid {
   padding: 2px 5px;
@@ -285,7 +285,6 @@ body {
 }
 
 .precio {
-  /* padding-top: 10px; */
   font-size: 2rem;
 }
 
@@ -391,16 +390,8 @@ body {
 
 .footer {
   background: #283048; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to bottom,
-    #fefdff,
-    #283048
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to bottom,
-    #fefdff,
-    #283048
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to bottom, #fefdff, #283048);
+  background: linear-gradient(to bottom, #fefdff, #283048);
   color: #fff;
   text-align: center;
 }
