--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -168,12 +168,13 @@ body {
 }
 
 .hero__paragrafo {
-  font-size: 2.2rem;
+  font-size: 1.7rem;
   font-weight: 600;
-  color: #000000;
+  color: #070707;
   text-align: center;
   animation: moveInRight 2s ease-out;
   font-family: "Gothic A1", sans-serif;
+  letter-spacing: 0.3rem;
 }
 
 .hero__form {
